# stig_edit

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: merge.yml  test.yml
github/workflows/: test.yml
src/stig_edit/: checks.py  ckl_editor.py  handler.py
stig_edit/: ckl_editor.py  handler.py
tests/: main.py  test.ckl  test_main.py  test_stig_edit.py
